# entity-resolution-reranker

./: .gitignore  README.md  pyproject.toml  test_split.py  todo.md
configs/: data.yaml  eval.yaml.example  models.yaml  training.yaml
data/manifests/: split_manifest.json  upload_manifest.json
data/pool/: pool_stats.json
experiments/001_bm25_plus_minilm_reranker/: config.json
experiments/001_bm25_plus_minilm_zs/: config.json  notes.md
experiments/002_bm25_plus_gte_ft/: config.json  notes.md
experiments/002_bm25_plus_minilm_reranker_ft/: config.json
experiments/003_bm25_plus_bge_reranker_m3/: config.json
experiments/003_gte_ft_plus_minilm_zs/: config.json  notes.md
experiments/004_bm25_plus_bge_reranker_m3_ft/: config.json
experiments/004_gte_ft_plus_gte_zs/: config.json  notes.md
experiments/005_bm25_plus_gte_reranker/: config.json
experiments/005_gte_ft_plus_gte_ft/: config.json  notes.md
experiments/006_bm25_plus_gte_reranker_ft/: config.json
experiments/006_gte_ft_plus_granite_ft/: config.json  notes.md
experiments/007_bm25_plus_granite_reranker/: config.json
experiments/007_gte_ft_plus_bge_m3_zs/: config.json  notes.md
experiments/008_bm25_plus_granite_reranker_ft/: config.json
results/: 001.json  001_bm25_plus_minilm_zs.json  002_bm25_plus_gte_ft.json  003_gte_ft_plus_minilm_zs.json  004_gte_ft_plus_gte_zs.json  005_gte_ft_plus_gte_ft.json  006_gte_ft_plus_granite_ft.json  007_gte_ft_plus_bge_m3_zs.json  report.md
scratch/: developer_log.md
src/data/: boundary.py  (+7 more)
tests/: conftest.py
writing/: BLOG_POST.md  paper_addendum.md
(+33 files in other folders)
