[project]
name = "entity-resolution-reranker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cleanco>=2.3",
    "doublemetaphone>=1.2",
    "jellyfish>=1.2.1",
    "names-dataset>=3.3.1",
    "nicknames>=1.0.1",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "polars>=1.39.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
